--- a/test.css
+++ b/test.css
@@ -1,3 +1,53 @@
+/*анимация*/
+@keyframes pulsate0 {
+    0% {
+        transform: scale(0.9);
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.9;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+
+@keyframes pulsate1 {
+    0% {
+        transform: scale(0.9);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1.4);
+        opacity: 0;
+    }
+}
+
+@keyframes pulsate2 {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1.2);
+        opacity: 0;
+    }
+}
+
 /*Первый слайд*/
 html {
     scroll-behavior: smooth;
@@ -47,27 +97,29 @@ body {
 .goal1 img {
     position: absolute;
 }
-.one1{
+
+.one1 {
     animation: pulsate0 infinite 0.8s;
     animation-delay: 0.3s;
     top: -26.25px;
     left: -26.25px;
 }
 
-.two1{
+.two1 {
     animation: pulsate1 infinite 0.8s;
     animation-delay: 0.2s;
     top: -20px;
     left: -20px;
-    
+
 
 }
-.three1{
-        animation: pulsate2 infinite 0.8s;
-        top: -8.5px;
-        left: -8.5px;
 
-        
+.three1 {
+    animation: pulsate2 infinite 0.8s;
+    top: -8.5px;
+    left: -8.5px;
+
+
 }
 
 .goal1 h2 {
@@ -93,24 +145,27 @@ body {
 .goal2 img {
     position: absolute;
 }
-.one2{
+
+.one2 {
     animation: pulsate0 infinite 0.8s;
     animation-delay: 0.3s;
     top: -13.5px;
     left: -13.5px;
 }
-.two2{
+
+.two2 {
     animation: pulsate1 infinite 0.8s;
     animation-delay: 0.2s;
     top: -10px;
     left: -10px;
-    
+
 
 }
-.three2{
-        animation: pulsate2 infinite 0.8s;
-        top: -5.5px;
-        left: -5.5px;
+
+.three2 {
+    animation: pulsate2 infinite 0.8s;
+    top: -5.5px;
+    left: -5.5px;
 
 }
 
@@ -136,24 +191,27 @@ body {
 .goal3 img {
     position: absolute;
 }
-.one3{
+
+.one3 {
     animation: pulsate0 infinite 0.8s;
     animation-delay: 0.3s;
     top: -7.65px;
     left: -7.65px;
 }
-.two3{
+
+.two3 {
     animation: pulsate1 infinite 0.8s;
     animation-delay: 0.2s;
     top: -4.6px;
     left: -4.6px;
-    
+
 
 }
-.three3{
-        animation: pulsate2 infinite 0.8s;
-        top: -2.55px;
-        left: -2.55px;
+
+.three3 {
+    animation: pulsate2 infinite 0.8s;
+    top: -2.55px;
+    left: -2.55px;
 
 }
 
@@ -282,7 +340,19 @@ body {
 
 /*Третий слайд 1*/
 .inline {
+    width: 1024px;
+    height: 768px;
     display: inline-flex;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+.carusel{
+    width: fit-content;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+    display: flex;
 }
 
 .thirdSlideOne {
@@ -480,6 +550,3 @@ body {
     z-index: 10000;
     margin-bottom: 5px;
 }
-
-
-
